--- a/README.adoc
+++ b/README.adoc
@@ -19,7 +19,7 @@ If you want to use this configuration, change it there.
 git init
 git remote add origin https://github.com/poiu530/pkruszec-debian
 git fetch
-git checkout origin/main
+git checkout -f origin/main
 sudo ./setup.sh
 ----
 
